Wed May  2 11:22:52 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: use Qtrue instead of 2.

	* vm.c, insns.def: support "lambda" calling convention.

Wed May  2 06:46:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c, parse.y, ruby.h (rb_compile_warn, rb_compile_warning): warn
	  for compilation.  the parser should no longer use rb_warn() and
	  rb_warning().  [ruby-dev:30121]

Wed May  2 05:45:21 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assoc): result of assoc_new needs to be an assoc.

Wed May  2 05:40:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_pow): improvement by calculating from MSB and using
	  factorization.  <http://yowaken.dip.jp/tdiary/20070426.html#p01>

Tue May  1 18:45:45 2007  Koichi Sasada  <ko1@atdot.net>

	* sample/test.rb: import matzruby's sample/test.rb.

Tue May  1 17:46:05 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_choice): a new method to choose an element
	  randomly from an array.

	* array.c (rb_ary_choice): fixed mistake from RDoc.

Tue May  1 13:59:18 2007  Koichi Sasada  <ko1@atdot.net>

	* proc.c (proc_arity): fix an arity bug ([ruby-core:11060]).

Tue May  1 13:12:49 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvcore.h, compile.c (set_arguments): support post arguments.

	* test/ruby/test_method.rb: add tests for above.

	* test/ruby/test_proc.rb: ditto.

	* proc.c: fix an arity bug ([ruby-core:11029]).

	* vm.c, vm.h, insns.def, vm_dump.h: fix bmethod process.

	* vm.c: support block argument on block parameter.

Fri Apr 27 17:05:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (int_pow): bugfix of overflow detection.

	* numeric.c (int_pow): rb_big_pow() may return other than Bignum.

Fri Apr 27 01:51:50 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: support multiple splat (e.g, [a, *b, *c, e, *f]).

Fri Apr 27 00:03:48 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_pow): truncate all zero BDIGITs. [ruby-dev:30733]
